添加配置远程拉取

--- a/src/main/resources/application-ops.yml
+++ b/src/main/resources/application-ops.yml
@@ -7,10 +7,11 @@ spring:
       password: admin
 
 
+
 zuul:
   routes:
     test:
-      path: /test/**
+      path: /api/test/**
       url : discovery-client
       stripPrefix : true   #是否去掉路径前缀进行映射  默认是true 去掉
     test4:
