--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,10 +1,10 @@
 server:
-  port: 8601
+  port: 8609
 
 eureka:
   instance: trying-zuul-001
   prefer-ip-address: true      #false 表示使用主机名进行地址访问；true表示根据IP进行地址重定向
   client:
     serviceUrl:
-      defaultZone: http://localhost:8801/eureka/
-    register-with-eureka: false  #是否向服务中心注册 true是 false否
+      defaultZone: http://192.168.1.158:8801/eureka/
+    register-with-eureka: true  #是否向服务中心注册 true是 false否
